cert-manager/restrict-issuer/.kyverno-test/resource.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: acme-crt
spec:
  secretName: acme-crt-secret
  dnsNames:
  - example.corp.com
  issuerRef:
    name: acme-prod
    kind: Issuer
    group: cert-manager.io
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: letsencrypt-crt
spec:
  secretName: letsencrypt-crt-secret
  dnsNames:
  - foo.corp.com
  issuerRef:
    name: our-corp-issuer
    kind: ClusterIssuer
    group: cert-manager.io
